fix: one str is wrap

--- a/dashboard-angular/src/styles.css
+++ b/dashboard-angular/src/styles.css
@@ -33,3 +33,8 @@ gridster-preview {
   border: none !important;
   overflow: auto !important;
 }
+
+.NgxEditor__Content--Disabled {
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
